# aibes-agent

./: .gitignore  CHANGELOG.md  README.md  aibes-agent.yaml  config.example.yaml  copy_agent_skills.ps1  install.bat  pyproject.toml  run-web.bat  run.bat
.github/workflows/: ci.yml  release.yml
aibes_agent/: __init__.py  cli.py  config.py
aibes_agent/core/: cache.py  context.py  engine.py  llm.py  retry.py  router.py  session.py  stats.py  summarizer.py  tool_registry.py
aibes_agent/mcp/: __init__.py  client.py  tool.py
aibes_agent/memory/: __init__.py  store.py  tool.py
aibes_agent/permissions/: engine.py
aibes_agent/planner/: __init__.py  executor.py  models.py  planner.py  tool.py
aibes_agent/plugins/: __init__.py  builder.py  loader.py  plugin.py
aibes_agent/skills/: __init__.py  builder.py  loader.py  skill.py
aibes_agent/tools/: __init__.py  agent.py  base.py  code_review.py  documents.py  drilling.py  fs.py  images.py  search.py  shell.py  task.py
aibes_agent/web/: __init__.py  openai_compat.py  runner.py  server.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CODE_REVIEW.md  CONFIG.md  CONTRIBUTING.md  DOCUMENTS.md  DOMAIN_CASE.md  DRILLING.md  MCP.md  MEMORY.md  MODULE_DESIGN.md  PLANNER.md  PLUGINS.md  QUICK_START.md  README.md  ROADMAP.md  SESSION.md  SKILLS.md  TOOL_DEVELOPMENT.md  WEB_UI.md
docs/references/: 04_Claude_Code_代码分析实战指南.md  05_Claude_Code_源码架构分析.md  20260519_Agentic_AI_架构设计深度分析.md  README_知识库索引.md
examples/: agent_demo.py  code_review_agent.py  document_processor_agent.py  drilling_analysis_agent.py  hydraulics_validator_agent.py  mcp_demo.py  planner_demo.py  readme_demo.py  security_audit_agent.py  skill_demo.py
examples/greeting_plugin/: __init__.py  demo.py  greeting.py  plugin.yaml  tool.py
minagent/: __init__.py  cli.py
minagent/core/: cache.py  context.py  engine.py  llm.py  tool_registry.py
minagent/permissions/: engine.py
minagent/tools/: __init__.py  agent.py  base.py  fs.py  search.py  shell.py  task.py
scripts/: README.md  install.bat  install.ps1  install.sh  run-web.bat  run-web.ps1  run-web.sh  run.bat  run.ps1  run.sh
tests/: test_agent_tool.py  test_cache.py  test_cache_persistence.py  test_cli.py  test_code_review_tools.py  test_config.py  test_context_compact.py  test_document_tools.py  test_drilling_tools.py  test_engine.py  test_llm.py  test_mcp.py  test_memory.py  test_permissions.py  test_permissions_ask.py  test_planner.py  test_planner_executor.py  test_plugins.py  test_retry.py  test_router.py  test_search.py  test_session.py  test_session_stores.py  test_session_summarizer.py  test_shell.py  test_skills.py  test_stats.py  test_task_list_v2.py  test_tool_registry_v2.py  test_tools.py  test_web.py
(+4 files in other folders)
