[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aibes-agent"
version = "0.3.0"
description = "A minimal Python agent framework inspired by Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Richard", email = "richardcuick@outlook.com"}
]
keywords = ["agent", "llm", "tool-use", "ai", "code-assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0",
    "mypy>=1.9.0",
    "rich>=13.7.0",
    "aibes-agent[web,mcp]",
]
cli = [
    "typer>=0.12.0",
    "rich>=13.7.0",
]
web = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=1.8.0",
    "httpx-sse>=0.4.0",
]
mcp = [
    "mcp>=1.27.0,<2",
]

[project.scripts]
aibes-agent = "aibes_agent.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["aibes_agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py311']
